// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHeaderSectionItemButton is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiHeaderSectionItemButton testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiHeaderSectionItemButton__inner"
  >
    <span
      class=""
    />
  </span>
</button>
`;

exports[`EuiHeaderSectionItemButton renders animation 1`] = `
<button
  class="euiHeaderSectionItemButton"
  type="button"
>
  <span
    class="euiHeaderSectionItemButton__inner"
  >
    <span
      class="euiHeaderSectionItemButton--isAnimating"
    />
    <span
      class="euiHeaderSectionItemButton__notification euiHeaderSectionItemButton__notification--dot"
      color="accent"
      data-euiicon-type="dot"
    />
  </span>
</button>
`;

exports[`EuiHeaderSectionItemButton renders background 1`] = `
<button
  class="euiHeaderSectionItemButton"
  type="button"
>
  <span
    class="euiHeaderSectionItemButton__inner--hasBackground"
  >
    <span
      class="euiHeaderSectionItemButton__notification--dot"
      color="accent"
      data-euiicon-type="dot"
    />
    <span
      class=""
    />
  </span>
</button>
`;

exports[`EuiHeaderSectionItemButton renders children 1`] = `
<button
  class="euiHeaderSectionItemButton"
  type="button"
>
  <span
    class="euiHeaderSectionItemButton__inner"
  >
    <span
      class=""
    >
      <span>
        Ahoy!
      </span>
    </span>
  </span>
</button>
`;

exports[`EuiHeaderSectionItemButton renders notification as a badge 1`] = `
<button
  class="euiHeaderSectionItemButton"
  type="button"
>
  <span
    class="euiHeaderSectionItemButton__inner"
  >
    <span
      class=""
    />
    <span
      class="euiNotificationBadge euiHeaderSectionItemButton__notification euiHeaderSectionItemButton__notification--badge"
    >
      1
    </span>
  </span>
</button>
`;

exports[`EuiHeaderSectionItemButton renders notification as a dot 1`] = `
<button
  class="euiHeaderSectionItemButton"
  type="button"
>
  <span
    class="euiHeaderSectionItemButton__inner"
  >
    <span
      class=""
    />
    <span
      class="euiHeaderSectionItemButton__notification euiHeaderSectionItemButton__notification--dot"
      color="accent"
      data-euiicon-type="dot"
    />
  </span>
</button>
`;

exports[`EuiHeaderSectionItemButton renders notification color 1`] = `
<button
  class="euiHeaderSectionItemButton"
  type="button"
>
  <span
    class="euiHeaderSectionItemButton__inner"
  >
    <span
      class=""
    />
    <span
      class="euiNotificationBadge euiNotificationBadge--subdued euiHeaderSectionItemButton__notification euiHeaderSectionItemButton__notification--badge"
    >
      1
    </span>
  </span>
</button>
`;
